Enforced minimum widths for projects to prevent horizontal collapse

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -34,6 +34,7 @@
   display: flex;
   flex-direction: column;
   width: 600px;
+  min-width: 600px;
   box-sizing: border-box;
   border-right: 1px solid #363636;
   flex: 0 0 auto;
@@ -157,6 +158,7 @@
   }
   .work-box {
     width: 450px;
+    min-width: 450px;
     padding: 50px;
   }
   .work-flex {
@@ -170,6 +172,7 @@
 @media only screen and (max-width: 1400px) {
   .work-box {
     width: 350px;
+    min-width: 350px;
     padding: 30px;
   }
   .work-flex {
